--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                <p>I was born and raised in a small town in Poland but since couple of years I'm fulfilling my aspirations in Amsterdam.</p>
+                <p>I was born and raised in a small but very pretty town in Poland and because of my never ending curiosity, since couple of years I'm fulfilling my aspirations in Amsterdam.</p>
             </div>
             <div class="div-2">
-                <p>My passion: I love creation, wheather it will be writing, drawing or dancing; these are my ways to express myself, to meditate and communicate.</p>
+                <p>My passion: I love music and dance, they are the most powerful and diverse method of expression. I love to be on the move, whether by dancing, doing yoga, travelling -these are my ways to go hrough life.</p>
             </div>
             <div class="div-3">
-                <p>Fact about me: sometimes I read as many as 10 books at the same time, when I can't actually decide which one is the best so I pick one depending on the mood.</p>
+                <p>Fact about me: sometimes I read as many as 10 books at the same time, when I can't actually decide which one is the best so I pick one depending on the mood. And I can twerk ;)</p>
             </div>
         </section>    
 
